<resources>
    <string name="app_name">BubbleEasy</string>
    <string name="restart">Restart</string>
    <string name="home">Home</string>
    <string name="setting">Settings</string>
    <string name="share">Share</string>
    <string name="rate_now">Rate now</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy policy</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="freshness_wellness">Freshness Wellness</string>
    <string name="action_logout">logout</string>
    <string name="start">Start</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>

    <!--Banner id-->
    <string name="ad_id_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_id_interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_app_id">ca-app-pub-3845645125123775~3450308584</string>
    <string name="settings">Settings</string>
    <string name="total_elapsed_time">Total elapsed time</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="number_of_rows">Number of rows</string>
    <string name="number_of_columns">Number of columns</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>@string/home</item>
        <item>@string/setting</item>
        <item>@string/home</item>
        <item>@string/home</item>
        <item>@string/terms_of_use</item>
        <item>@string/privacy_policy</item>

    </string-array>






        </resources>
