<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:title="@string/home"/>
        <item
                android:id="@+id/nav_setting"
                android:title="@string/setting"/>
        <item
                android:id="@+id/nav_share"
                android:title="@string/share"/>
        <item
                android:id="@+id/nav_rate_now"
                android:title="@string/rate_now"/>
        <item
                android:id="@+id/nav_terms_of_use"
                android:title="@string/terms_of_use"/>
        <item
                android:id="@+id/nav_pribacy_policy"
                android:title="@string/privacy_policy"/>
    </group>


</menu>
