<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
              android:id="@+id/container"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/splash_bg"
              android:orientation="vertical"
              tools:context=".view.activity.SplashActivity">



    <ImageView
            android:id="@+id/img_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10dp"
            android:src="@drawable/ic_menu_white_24dp"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:layout_gravity="center"
                  android:gravity="center">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:orientation="vertical"
                      android:layout_weight=".5"
                      android:layout_gravity="center"
                      android:gravity="center">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/txt_30sp"
                    android:text="@string/app_name"/>

            <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/dimen_90dp"
                    android:layout_marginRight="@dimen/dimen_90dp"
                    android:background="@android:color/white"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/dimen_2dp"
                    android:textSize="@dimen/txt_22sp"
                    android:text="@string/freshness_wellness"/>

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:orientation="vertical"
                      android:layout_weight=".5"
        >

            <Button
                    android:id="@+id/btn_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dimen_20dp"
                    android:paddingRight="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:textSize="@dimen/txt_28sp"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:background="@drawable/button_border"
                    android:text="@string/start"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
</layout>
