<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:background="@color/colorTransparent"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_bg"
            android:orientation="vertical">

        <TextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_22sp"/>


        <TextView
                android:id="@+id/text_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/a"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:textAllCaps="true"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/total_elapsed_time"
                android:textColor="#000"
                android:textSize="20sp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1dp"
                    android:background="@color/colorPrimary"/>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:orientation="horizontal">


                    <TextView
                            android:id="@+id/tv_ok"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/ok"
                            android:gravity="center"
                            android:textColor="#8AB1F2"
                            android:textSize="20sp"/>


                </LinearLayout>

                <View android:layout_width="@dimen/dimen_1dp"
                      android:layout_height="wrap_content"
                      android:background="@color/colorPrimary"/>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:orientation="horizontal">


                    <TextView
                            android:id="@+id/tv_restart"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/restart"
                            android:gravity="center"
                            android:textColor="#8AB1F2"
                            android:textSize="20sp"/>


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>