<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/splash_bg"
                android:orientation="vertical"
                tools:context=".view.activity.SplashActivity">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_gravity="center_vertical"
                          android:gravity="center_vertical">

                <ImageView
                        android:id="@+id/img_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_10dp"
                        android:src="@drawable/ic_menu_white_24dp"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_18sp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/settings"/>

            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grey"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_50dp"
                >

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".8">

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textColor="@color/white"
                                android:gravity="center_vertical"
                                android:textSize="@dimen/txt_18sp"
                                android:layout_marginLeft="@dimen/dimen_10dp"
                                android:layout_marginRight="@dimen/dimen_10dp"
                                android:text="@string/sound"/>


                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight=".2">


                        <androidx.appcompat.widget.SwitchCompat
                                android:id="@+id/switch_sound"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:checked="true"
                                android:textAppearance="?android:attr/textAppearanceMedium"/>

                    </LinearLayout>

                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_1dp"
                        android:layout_marginLeft="@dimen/dimen_10dp"
                        android:layout_marginRight="@dimen/dimen_10dp"
                        android:background="@android:color/white"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_50dp"
                >

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".8">

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textColor="@color/white"
                                android:gravity="center_vertical"
                                android:layout_marginLeft="@dimen/dimen_10dp"
                                android:layout_marginRight="@dimen/dimen_10dp"
                                android:textSize="@dimen/txt_18sp"
                                android:text="@string/vibrate"/>


                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight=".2">


                        <androidx.appcompat.widget.SwitchCompat
                                android:id="@+id/switch_vibrate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:checked="true"
                                android:textAppearance="?android:attr/textAppearanceMedium"/>

                    </LinearLayout>

                </LinearLayout>


                <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_1dp"
                        android:layout_marginLeft="@dimen/dimen_10dp"
                        android:layout_marginRight="@dimen/dimen_10dp"
                        android:background="@android:color/white"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_50dp">

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".8">

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textColor="@color/white"
                                android:textSize="@dimen/txt_18sp"
                                android:gravity="center_vertical"
                                android:layout_marginLeft="@dimen/dimen_10dp"
                                android:layout_marginRight="@dimen/dimen_10dp"
                                android:text="@string/number_of_rows"/>


                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:layout_weight=".2">


                        <Spinner
                                android:id="@+id/spinner_number_of_rows"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/dimen_5dp"
                                android:background="@color/white"
                                android:gravity="center"
                                android:textAlignment="center"
                                android:popupBackground="@color/colorAccent"/>


                    </LinearLayout>

                </LinearLayout>


                <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_1dp"
                        android:layout_marginLeft="@dimen/dimen_10dp"
                        android:layout_marginRight="@dimen/dimen_10dp"
                        android:background="@android:color/white"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_50dp"
                >

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".8">

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textColor="@color/white"
                                android:gravity="center_vertical"
                                android:textSize="@dimen/txt_18sp"
                                android:layout_marginLeft="@dimen/dimen_10dp"
                                android:layout_marginRight="@dimen/dimen_10dp"
                                android:text="@string/number_of_columns"/>


                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:layout_weight=".2">


                        <Spinner
                                android:id="@+id/spinner_number_of_coloumns"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/dimen_5dp"
                                android:background="@color/white"
                                android:gravity="center"
                                android:textAlignment="center"
                                android:popupBackground="@color/colorAccent"/>


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>