<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:ads="http://schemas.android.com/tools"
>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorAccent"
                    android:elevation="0dp"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <LinearLayout android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight=".3">

                <ImageView
                        android:id="@+id/img_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_10dp"
                        android:src="@drawable/ic_arrow_back_white_24dp"/>
            </LinearLayout>
            <LinearLayout android:layout_width="0dp"
                          android:layout_height="match_parent"
                          android:gravity="center"
                          android:layout_weight=".35">


                <Chronometer
                        android:id="@+id/chronometer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/txt_15sp"
                        android:textAllCaps="false"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:paddingLeft="@dimen/dimen_20dp"
                        android:paddingRight="@dimen/dimen_20dp"
                        android:paddingTop="@dimen/dimen_5dp"
                        android:paddingBottom="@dimen/dimen_5dp"
                        android:layout_marginBottom="@dimen/dimen_5dp"
                        android:background="@drawable/button_timer_design"
                        android:text="@string/start"/>

            </LinearLayout>
            <LinearLayout android:layout_width="0dp"
                          android:layout_height="match_parent"
                          android:gravity="center"
                          android:layout_weight=".35">

                <TextView
                        android:id="@+id/btn_restart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/txt_15sp"
                        android:textAllCaps="false"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:paddingLeft="@dimen/dimen_20dp"
                        android:paddingRight="@dimen/dimen_20dp"
                        android:paddingTop="@dimen/dimen_5dp"
                        android:paddingBottom="@dimen/dimen_5dp"
                        android:layout_marginBottom="@dimen/dimen_5dp"
                        android:background="@drawable/button_timer_design"
                        android:text="@string/restart"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
                android:id="@+id/bubble_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".9"
                android:orientation="vertical">

            <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never">

                <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:overScrollMode="never">

                    <!--   <RelativeLayout
                               android:id="@+id/RelativeLayout1"
                               android:layout_width="match_parent"
                               android:layout_height="match_parent"
                               android:orientation="vertical">-->


                    <TableLayout
                            android:id="@+id/table_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                    </TableLayout>


                    <!--   </RelativeLayout>-->
                </HorizontalScrollView>

            </ScrollView>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".1"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

            <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/banner_AdView"
                    ads:adUnitId="@string/ad_id_banner"
                    ads:adSize="BANNER"/>


        </LinearLayout>

    </LinearLayout>


</layout>
